# HelloTriangle_Vulkan

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp  premake5.lua
Libs/stb/: CMakeLists.txt
Libs/stb/include/: stb_image.h
shaders/: compile.bat  fullscreen_quad.frag  fullscreen_quad.frag.spv  fullscreen_quad.vert  fullscreen_quad.vert.spv  shader.frag  shader.vert
src/: HelloTriangleApp.cpp  HelloTriangleApp.h  HelloTriangleApp.hpp
